# dovecot-core

./: AUTHORS  Makefile.am  configure.ac
src/: Makefile.am
src/lib-mongodb/: Makefile.am  driver-mongodb.c  driver-mongodb.h
